assets/less/custom.less
/* ... */
.chart-title h4 {
  font-size: 16px;
}



.distribution-chart {
  width: 250px;
  height:200px;
  display: inline-block;
}

.score {
  height:120px;
  max-height: 120px;
  display:table-cell;
  vertical-align:middle;
  font-weight: bold;
}

.total-score {
  font-size: 2em;
  width: 125px;
  margin: auto;
  color: white;
  background-color: #79c84a;
  border: 1px solid #ccc;
  border: 1px solid rgba(0, 0, 0, 0.2);
  -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
          border-radius: 8px;
}

@media (max-width: 768px) {
  .distribution-chart {
    width:100%;
  }
}

/* XXX difficult... 
.toggle-handle {
    width: 0;
    height: 0;
    border-top: 16px solid transparent;
    border-bottom: 16px solid transparent;
    border-left:16px solid #fff;
}

.btn-green-level-2 .toggle-handle {
    border-left: none;
    border-right:16px solid #fff;
}
*/

.toggle-handle {
    -webkit-transform: rotate(45deg);
       -moz-transform: rotate(45deg);
        -ms-transform: rotate(45deg);
         -o-transform: rotate(45deg);
    transform: rotate(45deg);
    background-color: #fff;
    width:32px;
}

/* user login and registration */
.auth-form {
  margin-top: 50px;
}

/* benchmark page (charts) */
.background {
    fill: #FFFFFF;
    fill-opacity: 0.01;
}

.arcs .label {
    font-family: "myriad-light",Helvetica,Arial,sans-serif;
    fill: #fefefe;
    font-size: 1em;
    font-weight: normal;
}

.arcs .label0 {
    stroke: #333;
    fill: #333;
    font-size: 1em;
    font-weight: normal;
}

.component {
    fill: #e1e1e1;
}

.labels .label {
    font-family: Myriad, "Helvetic Neue", Helvetica, Arial;
    text-anchor: middle;
    stroke: 0;
//    fill: #0000ff;
}

.arc0 {
    stroke-weight:0.1;
    fill: #eee; /* green-level-0 */
}

.arc1 {
    stroke-weight:0.1;
    fill: #9cd76b; /* green-level-1 */
}

.arc2 {
    stroke-weight:0.1;
    fill: #69b02b; /* green-level-2 */
}

.arc3 {
    stroke-weight:0.1;
    fill: #007c3f; /* green-level-3 */
}

.radial-svg {
    display: block;
    margin: 0 auto;
}

#outer {
background:#FFFFFF;
border-radius: 5px;
color: #000;
}


#top-score {
//width: 33%;
//height: 200px;
box-sizing: border-box;
//float: left;
}

.selectedRadial {
            border-radius: 3px;
background: #f4f4f4;
color: #000;
box-shadow: 0 1px 5px rgba(0,0,0,0.4);
-moz-box-shadow: 0 1px 5px rgba(0,0,0,0.4);
border: 1px solid rgba(200,200,200,0.85);
}

.radial {
border-radius: 3px;
background: #FFFFFF;
color: #000;
}

[data-target="#confirm-delete"],
[data-target="#confirm-delete"]:hover,
[data-target="#confirm-delete"]:active {
  text-decoration: none;
}

#matrixChart .chart {
    width: 500px;
    height: 300px;
}

.nvtooltip .footer {
    position: initial;
    height: auto;
    margin:0;
    clear:both;
    bottom: 0;
    font-size:inherit;
}

